# cell-growth-sim

./: .gitignore  LICENSE  README.md  ty.toml
analysis/: pyproject.toml
analysis/notebooks/: explore.py
data/: events.json
scratch/clap-play/: Cargo.toml
scratch/clap-play/src/: main.rs
sim/: Cargo.toml
sim/src/: cell.rs  cli.rs  config.rs  lib.rs  main.rs  simulation.rs  wasm.rs
